--- a/fish.html
+++ b/fish.html
@@ -1,57 +1,62 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<title>Pets: About Fish</title>
-<meta charset="utf-8">
+    <title>Pets: About Fish</title>
+    <meta charset="utf-8">
+    <link rel="stylesheet" href="styles.css">
 </head>
 
-<body>
+<body class="fish">
 
 <header>
-<h1>Pets</h1>
-<p>Everyone's best friends</p>
-<nav>
-<ul>
-	<li><a href="">Home</a></li>
-	<li><a href="">Dogs</a></li>
-	<li><a href="">Cats</a></li>
-	<li><a href="">Fish</a></li>
-</ul>
-</nav>
+    <h1>Pets</h1>
+    <p>Everyone's best friends</p>
+    <nav>
+        <ul>
+            <li><a href="">Home</a></li>
+            <li><a href="">Dogs</a></li>
+            <li><a href="">Cats</a></li>
+            <li><a href="">Fish</a></li>
+        </ul>
+    </nav>
 </header>
 
-<aside>
-<h2>Quick Links for Fish</h2>
-<nav>
-<ul>
-	<li><a href="">Fresh Water</a></li>
-	<li><a href="">Salt Water</a></li>
-</ul>
-</nav>
-</aside>
+<div class="page">
+    <div class="content">
+        <aside class="sidebar">
+            <h2>Quick Links for Fish</h2>
+            <nav>
+                <ul>
+                    <li><a href="">Fresh Water</a></li>
+                    <li><a href="">Salt Water</a></li>
+                </ul>
+            </nav>
+        </aside>
 
-<main>
-<article>
-<h2>About Fish</h2>
-<p>This page is about fish.</p>
-<p>This page is using <code>display: flex</code> to create the two-column sidebar in a fixed-width layout. To create this layout you need to add:</p>
-<ul>
-<li>All the proper layout ids (<code>banner, menu, sidebar, colophon</code>) added to their proper tags</li>
-<li>A <code>div</code> to create the livespace with the id of <code>wrapper</code></li>
-<li>A <code>div</code> to create the "flex container" which encompasses the <code>aside</code> and the <code>main</code> as the two columns</li> 
-<li>Set widths in sidebar and main that equal 100%, then us <code>gap</code> property in the flex container to create a space between them.</li>
-</ul>
+        <main class="main">
+            <article>
+                <h2>About Fish</h2>
+                <p>This page is about fish.</p>
+                <p>This page is using <code>display: flex</code> to create the two-column sidebar in a fixed-width layout. To create this layout you need to add:</p>
+                <ul>
+                    <li>All the proper layout ids (<code>banner, menu, sidebar, colophon</code>) added to their proper tags</li>
+                    <li>A <code>div</code> to create the livespace with the id of <code>wrapper</code></li>
+                    <li>A <code>div</code> to create the "flex container" which encompasses the <code>aside</code> and the <code>main</code> as the two columns</li> 
+                    <li>Set widths in sidebar and main that equal 100%, then use <code>gap</code> property in the flex container to create a space between them.</li>
+                </ul>
 
-<p>You can learn more about setting up your aquarium, and whether fresh water or salt water fish are the best fit for you! Keep in mind that fresh water fish are easier to care for, which is important. Keeping fish healthy is a lot harder than you would think.</p>
-</article>
-</main>
+                <p>You can learn more about setting up your aquarium, and whether fresh water or salt water fish are the best fit for you! Keep in mind that fresh water fish are easier to care for, which is important. Keeping fish healthy is a lot harder than you would think.</p>
+            </article>
+        </main>
+    </div>
+</div>
 
 <footer>
-<ul>
-	<li><a href="">facebook</a></li>
-	<li><a href="">instagram</a></li>
-	<li><a href="">twitter</a></li>
-</ul>
+    <ul>
+        <li><a href="https://www.facebook.com">facebook</a></li>
+        <li><a href="https://www.instagram.com">instagram</a></li>
+        <li><a href="https://www.twitter.com">twitter</a></li>
+    </ul>
 </footer>
 
 </body>
