edit index page header

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header class="index-header">
-        <h1>EX: CSS#3: Centered Layout</h1>
+        <h1>EX: CSS_EX4: Flexbox</h1>
     </header>
 
     <main class="index-main">
